--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ body{
     align-items: center;
     position: fixed;
     width: 100%;
+    z-index: 10;
 }
 .navbar ul{
     display: flex;
@@ -119,6 +120,7 @@ body{
     height: 350px;
     border-radius: 10px;
     box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.5);
+    z-index: -10;
 }
 #intro{
     display: flex;
